--- a/pyproject.toml
+++ b/pyproject.toml
@@ -96,6 +96,7 @@ name = "cz_conventional_commits"
 version = "0.11.31"
 update_changelog_on_bump = true
 version_files = ["pyproject.toml:version", "src/amltk/__version__.py"]
+changelog_start_rev = "1.0.0"
 
 # https://github.com/charliermarsh/ruff
 [tool.ruff]
