--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,35 +1,30 @@
-# Whenever we have a prerelease, we want to:
-# * Build the sdist and attach it to the release.
-# * Ensure that the docs will build.
-# This should be triggered from the cmdline with `just prerelease`.
-# Could also be triggered from the release page.
 name: release
 on:
   workflow_dispatch:
 permissions:
   contents: write
 jobs:
-  # test-code:
-  #   runs-on: ubuntu-latest
-  #   steps:
-  #     - uses: actions/checkout@v3
-  #     - uses: actions/setup-python@v4
-  #       with:
-  #         python-version: "3.10"
-  #         cache: pip
-  #     - run: python -m pip install ".[dev]"
-  #     - run: pytest ${{ env.test-dir }}
-  # test-docs:
-  #   needs: [test-code]
-  #   runs-on: ubuntu-latest
-  #   steps:
-  #     - uses: actions/checkout@v3
-  #     - uses: actions/setup-python@v4
-  #       with:
-  #         python-version: "3.10"
-  #         cache: pip
-  #     - run: python -m pip install ".[dev]"
-  #     - run: mkdocs build --clean --strict
+  test-code:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+      - uses: actions/setup-python@v4
+        with:
+          python-version: "3.10"
+          cache: pip
+      - run: python -m pip install ".[dev]"
+      - run: pytest ${{ env.test-dir }}
+  test-docs:
+    needs: [test-code]
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+      - uses: actions/setup-python@v4
+        with:
+          python-version: "3.10"
+          cache: pip
+      - run: python -m pip install ".[dev]"
+      - run: mkdocs build --clean --strict
   # Need to ensure we bump before we create any artifacts
   bump:
     runs-on: ubuntu-latest
