feat(scheduler): method `call_later`
Allows a function to be run sometime later after a delay, within
the scheduler. This can be useful to do `scheduler.stop()` or perhaps
other things?

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -301,3 +301,4 @@ reportUnknownArgumentType = false
 reportUnknownLambdaType = false
 reportPrivateUsage = false
 reportUnnecessaryCast = false
+reportUnusedFunction = false
