--- a/pyproject.toml
+++ b/pyproject.toml
@@ -40,6 +40,7 @@ doc = [
   "mkdocs-glightbox",
   "mkdocstrings[python]",
   "markdown-exec[ansi]",
+  "matplotlib",
   "rich",
   "mike",
   "pillow",
