--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -33,7 +33,7 @@ jobs:
       fail-fast: false
       matrix:
         python-version: ["3.10", "3.11"] # "3.12" doesn't work because of ConfigSpace for some reason.
-        os: ["ubuntu-latest", "macos-latest", "windows-latest"]
+        os: ["ubuntu-latest"] # Disable mac and windows until time to fix pynisher, "macos-latest", "windows-latest"]
 
     steps:
     - name: Checkout
