--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,7 +15,7 @@ description = "AutoML Toolkit: a toolkit for building automl system"
 classifiers = [
   'Intended Audience :: Science/Research',
   'Intended Audience :: Developers',
-  'License :: OSI Approved :: BSD-3-Clause License',
+  'License :: OSI Approved :: BSD License',
   'Programming Language :: Python',
   'Topic :: Software Development',
   'Topic :: Scientific/Engineering',
