feat(Scheduler): Monitor to view efficiency

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -308,3 +308,4 @@ reportPrivateUsage = false
 reportUnnecessaryCast = false
 reportUnusedFunction = false
 reportMissingTypeStubs = false
+reportPrivateImportUsage = false
